# singleshot

./: Cargo.toml  README.md
.github/workflows/: ci.yml  pre-release.yml  release.yml
Formula/: singleshot-nightly.rb
examples/config/: rust-wiki.md
homebrew-formula/: singleshot-nightly.rb  singleshot.rb
src/: chat.rs  cli.rs  config.rs  main.rs  mcp.rs  provider.rs  report.rs  ui.rs
