[package]
name = "singleshot"
version = "0.1.0"
edition = "2024"
authors = ["Vincent <vincentzhangz@outlook.com>"]
description = "A CLI tool for testing AI models with a single prompt"
documentation = "https://github.com/vincentzhangz/singleshot#readme"
readme = "README.md"
homepage = "https://github.com/vincentzhangz/singleshot"
repository = "https://github.com/vincentzhangz/singleshot"
license = "MIT"
keywords = ["ai", "cli", "llm", "openai", "anthropic"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["tests/*", "*.md", "!README.md"]

[dependencies]
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5.54", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json"] }
rig-core = { version = "0.28.0", features = ["rmcp"] }
rmcp = { version = "0.12", features = [
    "client",
    "transport-streamable-http-client-reqwest",
] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.24.0"
